--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "^5.13.7",
     "axios": "^1.4.0",
     "framer-motion": "^10.15.0",
+    "pattern.css": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-particles": "^2.10.1",
