--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "pattern.css": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-particles": "^2.10.1",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.14.1",
     "react-tsparticles": "^2.10.1",
     "rsuite": "^5.37.0",
